# intellij-bazel-right-click-test-repro

./: MODULE.bazel  README.md
hello-world/: BUILD.bazel
hello-world/src/main/java/org/: Main.java
hello-world/src/test/java/org/: MainTest.java
